qr code is generated for tiny url

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,10 @@
     {% csrf_token %}
   <label for="fname">url:</label><br>
   <input type="text" id="fname" name="urlshortner"><br>
+
       <input type="submit" value="Submit">
+   <img src="data.img"></img>
+    <label=data.shorturl></label>
 
 
 </form>
