qr code and short url in same page

--- a/templates/urlpage.html
+++ b/templates/urlpage.html
@@ -15,5 +15,6 @@
             <button class="btn"><i class="fa fa-download"></i> Download</button>
         </a>
     {% endif %}
+    <h1>{{urlshort}}</h1>
 
 </html>
